# mcb

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: api.md  assumptions.md  conf.py  constrained_mcb.md  edwards_hsu.md  example_workflow.md  index.md  mcb.md  mcb_critical_values.md  model_notation.md  quickstart.md  sat_example.md
examples/: demo_hsu_mcb_sat.py
src/mcb/: __init__.py  core.py  plotting.py
tests/: README.md  test_appendix_e_critical_values.py  test_core.py  test_plotting.py
tests/data/: appendix_e_tables.json
tools/: extract_appendix_e_tables.py
