[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcb"
version = "0.1.0"
description = "Hsu's multiple comparisons with the best for the unbalanced one-way model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
docs = [
  "myst-parser>=4",
  "sphinx>=8",
  "sphinx-rtd-theme>=3",
]
plot = ["matplotlib"]
test = [
  "matplotlib",
  "pytest",
]

[project.urls]
Repository = "https://github.com/johnswyou/mcb"
Issues = "https://github.com/johnswyou/mcb/issues"
Documentation = "https://mcb.readthedocs.io/en/latest/"

[tool.hatch.build.targets.wheel]
packages = ["src/mcb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
